# soteria

./: .gitignore  Anchor.toml  DEPLOY.md  README.md  nixpacks.toml  package-lock.json  package.json  railway.json  tsconfig.json  vercel.json
app/: .dockerignore  .railwayignore  Dockerfile  index.html  package.json  railway.json  tsconfig.json  vercel.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  styles.css
app/src/components/: ConfidentialPanel.tsx  CredentialPanel.tsx  Decrypt.tsx  Landing.tsx  LiveGraph.tsx  PayApp.tsx  PoolPanel.tsx  Shield.tsx  ShieldedPanel.tsx  StealthPanel.tsx  Workspace.tsx
app/src/lib/: aegis.ts  pool.ts  shielded.ts
circuits/: credential.circom  transaction.circom  withdraw.circom
programs/aegis-verifier/: Cargo.toml
programs/aegis-verifier/src/: lib.rs  verifying_key.rs
programs/soteria-verifier/src/: constants.rs  error.rs  events.rs  lib.rs  test_vectors.rs  verifying_key.rs  verifying_key_pool.rs  verifying_key_transaction.rs
scripts/: format-proof.js  gen-idl.js  gen-input.js  pool-e2e.mjs  pool-seed.mjs  setup-pool.sh  setup-transaction.sh  setup.sh  vk-to-rust.js
server/: .env.example  README.md  package.json  tsconfig.json
server/drizzle/: 0001_init.sql  0002_shielded.sql
server/src/: app.ts  circomlibjs.d.ts  config.ts  deps.ts  index.ts  logger.ts  schemas.ts  store.ts
server/src/db/: client.ts  migrate.ts  schema.ts
server/src/middleware/: auth.ts  (+2 more)
server/test/: api.test.ts  merkle.test.ts  postgres.integration.test.ts  proof.test.ts  setup.ts
tests/: aegis-verifier.ts  soteria-verifier.ts
(+33 files in other folders)
