[package]
name = "aegis-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aegis_verifier"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
# On-chain Groth16 verification over alt_bn128 (BN254) via Solana syscalls.
groth16-solana = "0.0.3"
